<resources>


    <string name="Unravel">UNRAVEL</string>
    <string name="introScreenOne">Remember all your favorite trips whenever, and wherever you go.</string>
    <string name="skip"><![CDATA[Skip>]]></string>
    <string name="title_activity_second_layout">SecondLayout</string>
    <string name="Diary">Diary</string>
    <string name="introScreenTwo">Record your favorite experiences with photos and videos while staying offline.</string>
    <string name="SHARE">SHARE</string>
    <string name="letsunravel">Let\'s Unravel!!</string>
    <string name="hello_world">Hello world!</string>
    <string name="input" />
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip1">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="app_name">UNRAVEL</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Log Out</string>

    <string name="koreanwon">Korean Won</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="night_mode">Night Mode</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us:</string>
    <string name="emails">Unravel@gmail.com</string>


    <string name="version">Unravel 1.0.</string>
    <string name="team">Developed by Team Unravel</string>


    <string name="add_new_trip">Add New Trip</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Googlemap -->
    <string name="google_maps_key"></string>
    <string name="title_activity_main2">UNRAVEL</string>
    <string name="title_activity_main_currency">MainActivityCurrency</string>
    <string name="title_activity_calculate">CalculateActivity</string>
    <string name="title_activity_convert_into">ConvertInto</string>

</resources>
