<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_second_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.apple.navigate.MainActivity"
    tools:showIn="@layout/activity_screen_2"
    android:background="@drawable/introimage2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="161dp"
        android:id="@+id/textView2"
        tools:text="@string/Diary"
        android:text="@string/Diary"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="80dp"
        android:fontFamily="serif"
        android:textColor="@android:color/background_dark"
        android:layout_alignParentRight="true"
        android:layout_marginRight="80dp" />
    <TextView
        android:text="@string/introScreenOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:paddingTop="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:textSize="24sp"
        tools:text="@string/introScreenTwo"
        android:textColor="#800020"
        android:layout_alignParentLeft="true" />
    <ImageView
        android:layout_width="100dp"
        app:srcCompat="@drawable/diarylogo"
        android:id="@+id/imageView"
        android:layout_marginStart="45dp"
        android:layout_marginTop="90dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_height="100dp"
        android:layout_marginLeft="45dp"
        android:layout_alignParentLeft="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_media_next"
        android:id="@+id/imageView2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="219dp"
        android:layout_alignParentRight="true" />

</RelativeLayout>
